--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,9 +9,13 @@
     tools:context=".HomeActivity">
 
     <TextView
+        android:id="@+id/displayLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="100sp"
+        android:fontFamily="@font/aclonica"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -22,7 +26,7 @@
         android:layout_width="163dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="350sp"
+        android:layout_marginTop="250sp"
         android:background="@color/colorPrimary"
         android:text="@string/check_location_text"
         android:textColor="@android:color/white" />
